[package]
name = "immt-web"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
# util
tokio = { version="1",features = ["full"], optional=true }
serde = { version="1",features = ["derive"] }
chrono = "0.4"
lazy_static = { version="1",optional=true }
async-trait = "0.1"
tracing = { version="0.1",optional=true }
serde_json = { version="1",features = ["unbounded_depth"] }
#miniserde = "0.1.39"
urlencoding = "2.1"
const_format = "0.2"
codee = "0.1.2"
# uuid = "1.10"
gloo-storage = { version = "0.3.0",optional=true }

#gloo-timers = { version="0.3",optional = false }
wasm-bindgen-futures = { version="0.4",optional = false }

# leptos
#actix-files = { version = "0.6", optional = true }
#actix-web = { version = "4", optional = true, features = ["macros"] }
#actix-web-actors = { version= "4",optional = true }
#actix = {version="0.13",optional=true}
console_error_panic_hook = "0.1"
leptos = { version = "=0.7.0-beta4", features=["nightly"]}# "experimental-islands"]}#,"nightly"] }
#leptos = { version="0.7.0-beta2",git = "https://github.com/leptos-rs/leptos.git", features=["nightly"]}#,"experimental-islands"] }
leptos_meta = { version = "=0.7.0-beta4"}
#leptos_meta = { version="0.7.0-beta2",git = "https://github.com/leptos-rs/leptos.git" }
leptos_router = { version = "=0.7.0-beta4",features = ["nightly"] }
#leptos_router = { version="0.7.0-beta2",git = "https://github.com/leptos-rs/leptos.git", features=["nightly"] }
leptos_axum = {version="=0.7.0-beta4",optional=true}#,features = ["islands-router"]}
#leptos_axum = { version="0.7.0-beta2",git = "https://github.com/leptos-rs/leptos.git", optional=true}#,features=["islands-router"] }
thaw = { version="=0.4.0-beta2",features=["nightly"] }

reactive_graph = { version="=0.1.0-beta4",optional=true }

#leptos-use = { version="0.12.0" }
#thaw = { git="https://github.com/thaw-ui/thaw",features=["nightly"] }
#thaw = { path="../../thaw/thaw",features=["nightly"] }

#thaw_utils = { path="../../thaw/thaw_utils",features=["nightly"] }
#thaw_components = { path="../../thaw/thaw_components" }

#leptos_actix = { version = "0.6", optional = true, features=["experimental-islands"] }
wasm-bindgen = "=0.2.93"
#server_fn = "=0.6.13"

# components
#leptonic = { version = "0.5.0", features = [] }
icondata_bi = "0"
icondata_ai = "0"
#stylance = "0.5"
#icondata_core = "0"

# axum
axum = {version="0.7",optional=true,features=["ws"]}
axum-extra = {version= "0.9",optional=true,features=["typed-header"]}
tower={version= "=0.5.0",optional=true,features = ["util"]}
tower-http={version="0.5",features=["fs","trace"],optional=true}
http="1"
axum-login = { version="0.15",optional=true }
tower-sessions = { version="0.12",optional=true,features=["tower-sessions-memory-store"] }
tower-sessions-sqlx-store = { version="0.12",optional=true,features = ["sqlite"] }

#immt
immt-api = { workspace=true,features=["oxigraph"],optional=true }
immt-core = { workspace=true,features=["serde"] }
immt-controller = { workspace=true, optional = true }
#immt-graphs = { path = "../graphs" }
immt-web-orm = {workspace=true, optional=true}

#experiments
sea-orm = {version="1",optional=true, features=["sqlx-sqlite","macros","with-json","with-chrono","with-uuid"]}
sqlx = {version="0",optional=true, features=["sqlite","runtime-tokio-rustls","macros"]}
libsqlite3-sys = { version="0", optional=true, features = ["bundled"] }

#actix-session = { version="0.9",optional=true,features = ["redis", "redis-rs-session"] }
#actix-identity = { version="0.7",optional=true }
#anyhow = { version="1",optional=true }
#md5 = {version="0.7",optional=true}
argon2 = { version="0.5",optional = true }

[features]
csr = [
  "leptos/csr",
  #"leptos_router/csr",
  #"leptos_meta/csr"
]
client = [
  "gloo-storage",
  "leptos/hydrate",
  #"leptos_meta/hydrate",
  #"leptos_router/hydrate",
  #"leptonic/hydrate"
  "thaw/hydrate",
  #"thaw_utils/hydrate",
  #"thaw_components/hydrate",
]
#accounts = ["server",
#  "dep:actix-session",
#  "dep:anyhow",
#  "dep:md5",
#  "dep:actix-identity",
#  "dep:argon2"
#]
server = [
  #"dep:actix-files",
  #"dep:actix-web",
  #"dep:leptos_actix",
  #"dep:actix-web-actors",
  #"dep:actix",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  #"leptos-use/ssr",
  "dep:immt-controller",
  "dep:immt-api",
  "dep:tokio",
  "thaw/ssr",
  #"thaw_utils/ssr",
  #"thaw_components/ssr",
  #"leptonic/ssr"
  "dep:lazy_static",
  "dep:tracing",

  "dep:sea-orm",
  "dep:sqlx",
  "dep:libsqlite3-sys",
  "dep:immt-web-orm",

  "dep:axum",
  "dep:axum-extra",
  "dep:leptos_axum",
  "dep:tower",
  "dep:tower-http",
  "dep:axum-login",
  "dep:tower-sessions",
  "dep:tower-sessions-sqlx-store",
  "dep:argon2"
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true
